--- a/Russian/main/LewaBirdView.apk/res/values-ru/strings.xml
+++ b/Russian/main/LewaBirdView.apk/res/values-ru/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">BirdView</string>
-  <string name="mb">Мб</string>
-    <string name="gb">Гб</string>
+  <string name="mb">МБ</string>
+    <string name="gb">ГБ</string>
     <string name="nosim">Нет данных о трафике</string>
     <string name="nosim_set">Лимит не задан</string>
     <string name="used">Использовано</string>
@@ -24,6 +24,6 @@
     <string name="safe_status_two">дня(ей) без проверки</string>
     <string name="safe_status_three">Проверить</string>
     <string name="clean_toast_str0">Оптимизировано</string>
-    <string name="clean_toast_str1">"Освобождено %1$d Мб памяти
-Доступно %2$d Мб"</string>
+    <string name="clean_toast_str1">"Освобождено %1$d МБ памяти
+Доступно %2$d МБ"</string>
 </resources>
